--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
 
         .flex-container {
             display: flex;
-            border-style: dotted;
+/*             border-style: dotted; */
             /* flex-wrap: wrap; */
             justify-content: space-evenly;
             align-items: baseline;
         }
 
         .flex-item {
-            border-style: dotted;
+/*             border-style: dotted; */
             border-width: 1px;
             font-size: 16px;
         }
