--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
         <!-- SKILLS AND AUTOBIOGRAPHY -->
         <div class="flex-container" id="skillAndAuto" style="height: 200px;">
             <div class="flex-item skill-item" id="skills">
-                <h2 class="center">Skills</h2>
+                <h2><center>Skills</center></h2>
                 <p>I can have various skills in arts and design, coding, and basic statistical analysis. I am a beginner programmer
                      with some experience with the following: Python, C, Java, Javascript, R, SAS, Stata, HTML and CSS.
                 </p>
             </div>
             <div class="flex-item skill-item" id="autibiography">
-                <h2 class="center">Autobiography</h2>
+                <h2><center>Autobiography</center></h2>
                 <p>I was born and raised in Naga City, Bicol. I grew up interested in the field of arts and mathematics.
                     I am currently studying BS Computer Science in UPLB.
                 </p>
