--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         }
         .project_item{
             border-radius: 10px;
-            background-color: #9090c1;
+            background-color: #8f92cd;
             padding: 5px;
             height: 150px;
             width: 150px;
