--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>HTML</title>
+    <title>CEA EXERCISE 2 CMSC 100 U5L</title>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;700&family=Inter:wght@100..900&family=Silkscreen&display=swap" rel="stylesheet">
     <style>
 
