--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>HTML</title>
+    <title>CEA U5L</title>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;700&family=Inter:wght@100..900&family=Silkscreen&display=swap" rel="stylesheet">
     <style>
 
@@ -107,7 +107,7 @@
             <img src="logo.png" class="center" style="width: 60px; border-radius: 50%;">
             </div>
             <div class="flex-item" style="flex:2">
-                <h2 style="color: #F1FADA;"><center>* ALYSSA'S PORTFOLIO *</center></h2></div>
+                <h2 style="color: #F1FADA;"><center>* ALYSSA CEA'S PORTFOLIO *</center></h2></div>
             <div class="flex-item" style="flex:1" >
                 <a class="nav-items" href="#home">Home</a>
                 <a class="nav-items" href="#contact">Contact</a>
